crates/strz-analysis/tests/snapshots/document_snapshots__document_snapshot@relationships__named_relationship_dynamic_reference_ok.snap
---
source: crates/strz-analysis/tests/document_snapshots.rs
expression: "SnapshotView::from(&snapshot)"
---
SnapshotView {
    has_syntax_errors: false,
    diagnostics: [],
    include_directives: [],
    identifier_modes: [],
    symbols: [
        Symbol {
            id: SymbolId(
                0,
            ),
            kind: SoftwareSystem,
            display_name: "A",
            binding_name: Some(
                "a",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 32,
                    end_byte: 33,
                    start_point: TextPoint {
                        row: 2,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 2,
                        column: 9,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 32,
                end_byte: 54,
                start_point: TextPoint {
                    row: 2,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 2,
                    column: 30,
                },
            },
            parent: None,
            syntax_node_kind: "software_system",
        },
        Symbol {
            id: SymbolId(
                1,
            ),
            kind: SoftwareSystem,
            display_name: "B",
            binding_name: Some(
                "b",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 63,
                    end_byte: 64,
                    start_point: TextPoint {
                        row: 3,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 3,
                        column: 9,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 63,
                end_byte: 85,
                start_point: TextPoint {
                    row: 3,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 3,
                    column: 30,
                },
            },
            parent: None,
            syntax_node_kind: "software_system",
        },
        Symbol {
            id: SymbolId(
                2,
            ),
            kind: Relationship,
            display_name: "Async",
            binding_name: Some(
                "rel",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 95,
                    end_byte: 98,
                    start_point: TextPoint {
                        row: 5,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 5,
                        column: 11,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 95,
                end_byte: 115,
                start_point: TextPoint {
                    row: 5,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 28,
                },
            },
            parent: None,
            syntax_node_kind: "relationship",
        },
    ],
    references: [
        Reference {
            kind: RelationshipSource,
            raw_text: "a",
            span: TextSpan {
                start_byte: 101,
                end_byte: 102,
                start_point: TextPoint {
                    row: 5,
                    column: 14,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 15,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: Some(
                SymbolId(
                    2,
                ),
            ),
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "b",
            span: TextSpan {
                start_byte: 106,
                end_byte: 107,
                start_point: TextPoint {
                    row: 5,
                    column: 19,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 20,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: Some(
                SymbolId(
                    2,
                ),
            ),
        },
    ],
}
